--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -83,98 +83,98 @@ jobs:
           git clone https://git.openwrt.org/openwrt/openwrt.git $DOWNLOAD_ROOT_PATH/openwrt
 
 #      - name: 导入拓展软件包
-#      #  run: |
-#      #    TMPDIR=$(mktemp -d) || exit 1
-#      #    EXT_PKGS_PREP_PATH=$TMPDIR/extpackages_prepare
-#      #    EXT_PKGS_DL_PATH=$DOWNLOAD_ROOT_PATH/extpackages/dl
-#      #    EXT_PKGS_PATH=$DOWNLOAD_ROOT_PATH/extpackages/extpackages
-#          #EXT_PKGS_CONFIG=$GITHUB_WORKSPACE/config/${{ matrix.config }}/OpenWrt-K/extpackages.config
-#      #    mkdir -p $EXT_PKGS_PREP_PATH $EXT_PKGS_PATH $EXT_PKGS_DL_PATH
-#      #    NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
-#      #    n=1
-#      #    while [ "$n" -le $NUMBER_OF_PKGS ]; do
-#      #        EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-#      #        EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-#      #        echo "REPOSITORIE=$EXT_PKG_REPOSITORIE BRANCH=$EXT_PKG_BRANCH" >> $EXT_PKGS_PREP_PATH/extpackagesbr.config
-#      #        n=$(( n+1 ))
-#      #    done
-#      #    sort $EXT_PKGS_PREP_PATH/extpackagesbr.config|uniq > $EXT_PKGS_PREP_PATH/clone.config
-#      #    sed -i -e "s/BRANCH=$//g" $EXT_PKGS_PREP_PATH/clone.config
-#      #    sed -i -e "s/BRANCH=/--branch /g" $EXT_PKGS_PREP_PATH/clone.config
-#      #    NUMBER_OF_CLONES=$(grep -c "REPOSITORIE=" $EXT_PKGS_PREP_PATH/clone.config)
-#      #    sed -i "s/^REPOSITORIE=//g" $EXT_PKGS_PREP_PATH/clone.config
-#      #    echo "开始克隆拓展软件包仓库"
-#      #    n=1
-#      #    while [ "$n" -le $NUMBER_OF_CLONES ]; do
-#      #        mkdir -p $EXT_PKGS_DL_PATH/TMP
-#      #        COLNE_ARGUMENT=$(sed -n "${n}p" $EXT_PKGS_PREP_PATH/clone.config)
-#      #        echo "正在克隆拓展软件包仓库：$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
-#      #        git clone --depth=1 --single-branch $COLNE_ARGUMENT $EXT_PKGS_DL_PATH/TMP
-#      #        cd $EXT_PKGS_DL_PATH/TMP
-#      #        if [ "$(echo "$COLNE_ARGUMENT" | grep -c " --branch ")" -ne '0' ];then
-#      #            BRANCH=$(git rev-parse --abbrev-ref HEAD)
-#      #        else
-#      #            BRANCH="default_branch"
-#      #        fi
-#      #        REPO_PATH="$BRANCH""/""$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
-#      #        mkdir -p $EXT_PKGS_DL_PATH/$REPO_PATH
-#      #        cp -RT $EXT_PKGS_DL_PATH/TMP/ $EXT_PKGS_DL_PATH/$REPO_PATH
-#      #        rm -rf $EXT_PKGS_DL_PATH/TMP/
-#      #        cd $GITHUB_WORKSPACE
-#      #        n=$(( n+1 ))
-#      #    done
-#      #    echo "开始整理拓展软件包"
-#      #    n=1
-#      #    while [ "$n" -le $NUMBER_OF_PKGS ]; do
-#      #        NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
-#      #        EXT_PKG_NAME=$(grep "^EXT_PACKAGES_NAME\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-#      #        EXT_PKG_PATH=$(grep "^EXT_PACKAGES_PATH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-#      #        EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-#      #        EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
-#      #        EXT_PKG_REPO_PATH=$(echo "$EXT_PKG_REPOSITORIE" | sed -e 's/[[:space:]]*$//' -e "s/\.git$//g" -e "s/ .*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")
-#      #        if [ -z "$EXT_PKG_BRANCH" ];then
-#      #            EXT_PKG_BRANCH="default_branch"
-#      #        fi
-#      #        mkdir -p $EXT_PKGS_PATH/$EXT_PKG_NAME
-#      #        cp -RT $EXT_PKGS_DL_PATH/$EXT_PKG_BRANCH/$EXT_PKG_REPO_PATH/$EXT_PKG_PATH $EXT_PKGS_PATH/$EXT_PKG_NAME
-#      #        n=$(( n+1 ))
-#      #    done
-#      #    cp -RT $EXT_PKGS_PATH $CMZJ_PACKAGE_ROOT_PATH
-#      #    [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
-#      #    cd $CMZJ_PACKAGE_ROOT_PATH
-#      #    echo "CMZJ_PACKAGE_ROOT_PATH"
-#      #    ls -la $(find $CMZJ_PACKAGE_ROOT_PATH -type d)
+#        run: |
+#          TMPDIR=$(mktemp -d) || exit 1
+#          EXT_PKGS_PREP_PATH=$TMPDIR/extpackages_prepare
+#          EXT_PKGS_DL_PATH=$DOWNLOAD_ROOT_PATH/extpackages/dl
+#          EXT_PKGS_PATH=$DOWNLOAD_ROOT_PATH/extpackages/extpackages
+#          EXT_PKGS_CONFIG=$GITHUB_WORKSPACE/config/${{ matrix.config }}/OpenWrt-K/extpackages.config
+#          mkdir -p $EXT_PKGS_PREP_PATH $EXT_PKGS_PATH $EXT_PKGS_DL_PATH
+#          NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
+#          n=1
+#          while [ "$n" -le $NUMBER_OF_PKGS ]; do
+#              EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#              EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#              echo "REPOSITORIE=$EXT_PKG_REPOSITORIE BRANCH=$EXT_PKG_BRANCH" >> $EXT_PKGS_PREP_PATH/extpackagesbr.config
+#              n=$(( n+1 ))
+#          done
+#          sort $EXT_PKGS_PREP_PATH/extpackagesbr.config|uniq > $EXT_PKGS_PREP_PATH/clone.config
+#          sed -i -e "s/BRANCH=$//g" $EXT_PKGS_PREP_PATH/clone.config
+#          sed -i -e "s/BRANCH=/--branch /g" $EXT_PKGS_PREP_PATH/clone.config
+#          NUMBER_OF_CLONES=$(grep -c "REPOSITORIE=" $EXT_PKGS_PREP_PATH/clone.config)
+#          sed -i "s/^REPOSITORIE=//g" $EXT_PKGS_PREP_PATH/clone.config
+#          echo "开始克隆拓展软件包仓库"
+#          n=1
+#          while [ "$n" -le $NUMBER_OF_CLONES ]; do
+#              mkdir -p $EXT_PKGS_DL_PATH/TMP
+#              COLNE_ARGUMENT=$(sed -n "${n}p" $EXT_PKGS_PREP_PATH/clone.config)
+#              echo "正在克隆拓展软件包仓库：$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
+#              git clone --depth=1 --single-branch $COLNE_ARGUMENT $EXT_PKGS_DL_PATH/TMP
+#              cd $EXT_PKGS_DL_PATH/TMP
+#              if [ "$(echo "$COLNE_ARGUMENT" | grep -c " --branch ")" -ne '0' ];then
+#                  BRANCH=$(git rev-parse --abbrev-ref HEAD)
+#              else
+#                  BRANCH="default_branch"
+#              fi
+#              REPO_PATH="$BRANCH""/""$(echo "$COLNE_ARGUMENT" | sed -e "s/ --branch.*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")"
+#              mkdir -p $EXT_PKGS_DL_PATH/$REPO_PATH
+#              cp -RT $EXT_PKGS_DL_PATH/TMP/ $EXT_PKGS_DL_PATH/$REPO_PATH
+#              rm -rf $EXT_PKGS_DL_PATH/TMP/
+#              cd $GITHUB_WORKSPACE
+#              n=$(( n+1 ))
+#          done
+#          echo "开始整理拓展软件包"
+#          n=1
+#          while [ "$n" -le $NUMBER_OF_PKGS ]; do
+#              NUMBER_OF_PKGS=$(grep -c "^EXT_PACKAGES_NAME\[" $EXT_PKGS_CONFIG)
+#              EXT_PKG_NAME=$(grep "^EXT_PACKAGES_NAME\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#              EXT_PKG_PATH=$(grep "^EXT_PACKAGES_PATH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#              EXT_PKG_REPOSITORIE=$(grep "^EXT_PACKAGES_REPOSITORIE\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#              EXT_PKG_BRANCH=$(grep "^EXT_PACKAGES_BRANCH\[$n\]" $EXT_PKGS_CONFIG| sed -e "s/.*=\"//g" -e "s/\"//g")
+#              EXT_PKG_REPO_PATH=$(echo "$EXT_PKG_REPOSITORIE" | sed -e 's/[[:space:]]*$//' -e "s/\.git$//g" -e "s/ .*//g" -e "s@.*://@@g" -e "s/^[a-zA-Z.]\{1,111\}\///" -e "s/\/$//g")
+#              if [ -z "$EXT_PKG_BRANCH" ];then
+#                  EXT_PKG_BRANCH="default_branch"
+#              fi
+#              mkdir -p $EXT_PKGS_PATH/$EXT_PKG_NAME
+#              cp -RT $EXT_PKGS_DL_PATH/$EXT_PKG_BRANCH/$EXT_PKG_REPO_PATH/$EXT_PKG_PATH $EXT_PKGS_PATH/$EXT_PKG_NAME
+#              n=$(( n+1 ))
+#          done
+#          cp -RT $EXT_PKGS_PATH $CMZJ_PACKAGE_ROOT_PATH
+#          [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
+#          cd $CMZJ_PACKAGE_ROOT_PATH
+#          echo "CMZJ_PACKAGE_ROOT_PATH"
+#          ls -la $(find $CMZJ_PACKAGE_ROOT_PATH -type d)
 
-#     # - name: 修改Makefile文件
-#     #   working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
-#     #   run: sed -i 's/include ..\/..\/luci.mk/include $(TOPDIR)\/feeds\/luci\/luci.mk/' $(find ./ -type f -name "Makefile")
+#      - name: 修改Makefile文件
+#        working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
+#        run: sed -i 's/include ..\/..\/luci.mk/include $(TOPDIR)\/feeds\/luci\/luci.mk/' $(find ./ -type f -name "Makefile")
 
-#     # - name: 创建符号链接以修复中文支持
-#     #   working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
-#     #   run: |
-#     #     TMPDIR=$(mktemp -d) || exit 1
-#     #     find . -name 'po' -type d > $TMPDIR/podir.list
-#     #     total_rows=$(sed -n '$=' $TMPDIR/podir.list) #行数-文件夹个数
-#     #     n=1
-#      #    while [ "$n" -le $total_rows ]; do
-#     #         DIR=$(sed -n "${n}p" $TMPDIR/podir.list)
-#     #         if [ -h $DIR/zh_Hans ]; then
-#     #             echo "$DIR/zh_Hans 符号链接以存在无需修复"
-#     #         elif [ -d $DIR/zh_Hans ]; then
-#     #             echo "$DIR/zh_Hans 目录已存在无需修复"
-#     #         elif [ -e $DIR/zh_Hans ]; then
-#     #             echo "$DIR/zh_Hans 存在非符号链接文件删除后重新创建"
-#     #             rm -rf $DIR/zh_Hans||exit 1
-#     #             ln -s zh-cn $DIR/zh_Hans||exit 1
-#     #         elif [ ! -d $DIR/zh-cn ]; then
-#     #             echo "$DIR/zh-cn 原汉化文件夹不存在，这可能是该luci插件原生为中文或不支持中文"
-#     #         else
-#     #             echo "$DIR/zh_Hans 符号链接不存在创建符号链接"
-#     #             ln -s zh-cn $DIR/zh_Hans||exit 1
-#     #         fi
-#     #         n=$(( n+1 ))
-#     #     done
-#     #     [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
+#      - name: 创建符号链接以修复中文支持
+#        working-directory:  ${{ env.CMZJ_PACKAGE_ROOT_PATH }}
+#        run: |
+#          TMPDIR=$(mktemp -d) || exit 1
+#          find . -name 'po' -type d > $TMPDIR/podir.list
+#          total_rows=$(sed -n '$=' $TMPDIR/podir.list) #行数-文件夹个数
+#          n=1
+#          while [ "$n" -le $total_rows ]; do
+#              DIR=$(sed -n "${n}p" $TMPDIR/podir.list)
+#              if [ -h $DIR/zh_Hans ]; then
+#                  echo "$DIR/zh_Hans 符号链接以存在无需修复"
+#              elif [ -d $DIR/zh_Hans ]; then
+#                  echo "$DIR/zh_Hans 目录已存在无需修复"
+#              elif [ -e $DIR/zh_Hans ]; then
+#                  echo "$DIR/zh_Hans 存在非符号链接文件删除后重新创建"
+#                  rm -rf $DIR/zh_Hans||exit 1
+#                  ln -s zh-cn $DIR/zh_Hans||exit 1
+#              elif [ ! -d $DIR/zh-cn ]; then
+#                  echo "$DIR/zh-cn 原汉化文件夹不存在，这可能是该luci插件原生为中文或不支持中文"
+#              else
+#                  echo "$DIR/zh_Hans 符号链接不存在创建符号链接"
+#                  ln -s zh-cn $DIR/zh_Hans||exit 1
+#              fi
+#              n=$(( n+1 ))
+#          done
+#          [[ -d $TMPDIR ]] && rm -rf "$TMPDIR"
 
       - name: 复制到cmzj_patch
         run: |
@@ -199,16 +199,16 @@ jobs:
 
       - name: 压缩
         run: |
-    #      cd $CMZJ_PACKAGE_ROOT_PATH
-    #      tar cvpzf $GITHUB_WORKSPACE/cmzj_package.tgz *
+#          cd $CMZJ_PACKAGE_ROOT_PATH
+#          tar cvpzf $GITHUB_WORKSPACE/cmzj_package.tgz *
           cd $CMZJ_PATCH_ROOT_PATH
           tar cvpzf $GITHUB_WORKSPACE/cmzj_patch.tgz *
 
-      #- name: 上传 cmzj_package
-      #  uses: actions/upload-artifact@v3
-      #  with:
-      #    name: cmzj_package-${{ matrix.config }}
-      #    path: cmzj_package.tgz
+#      - name: 上传 cmzj_package
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: cmzj_package-${{ matrix.config }}
+#          path: cmzj_package.tgz
 
       - name: 上传 cmzj_patch
         uses: actions/upload-artifact@v3
@@ -246,19 +246,19 @@ jobs:
           mkdir -p workspace
           export WORKSPACE_ROOT_PATH="$(pwd)/workspace"
           echo "WORKSPACE_ROOT_PATH=$WORKSPACE_ROOT_PATH" >> $GITHUB_ENV
-       #   mkdir -p $WORKSPACE_ROOT_PATH/{cmzj_package,cmzj_patch,log}
-       #   export CMZJ_PACKAGE_ROOT_PATH="$WORKSPACE_ROOT_PATH/cmzj_package"
+#          mkdir -p $WORKSPACE_ROOT_PATH/{cmzj_package,cmzj_patch,log}
+#          export CMZJ_PACKAGE_ROOT_PATH="$WORKSPACE_ROOT_PATH/cmzj_package"
           export CMZJ_PATCH_ROOT_PATH="$WORKSPACE_ROOT_PATH/cmzj_patch"
           export LOG_PATH="$WORKSPACE_ROOT_PATH/log"
-       #   echo "CMZJ_PACKAGE_ROOT_PATH=$CMZJ_PACKAGE_ROOT_PATH" >> $GITHUB_ENV
+#          echo "CMZJ_PACKAGE_ROOT_PATH=$CMZJ_PACKAGE_ROOT_PATH" >> $GITHUB_ENV
           echo "CMZJ_PATCH_ROOT_PATH=$CMZJ_PATCH_ROOT_PATH" >> $GITHUB_ENV
           echo "LOG_PATH=$LOG_PATH" >> $GITHUB_ENV
           cat $GITHUB_ENV >> $GITHUB_WORKSPACE/build1_ENV
 
-     # - name: 下载cmzj_package
-     #   uses: actions/download-artifact@v3
-     #   with:
-     #     name: cmzj_package-${{ matrix.config }}
+#      - name: 下载cmzj_package
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: cmzj_package-${{ matrix.config }}
 
       - name: 下载cmzj_patch
         uses: actions/download-artifact@v3
@@ -267,14 +267,14 @@ jobs:
 
       - name: 解压
         run: |
-       #   tar xvpfz $GITHUB_WORKSPACE/cmzj_package.tgz -C $CMZJ_PACKAGE_ROOT_PATH
-       #   tar xvpfz $GITHUB_WORKSPACE/cmzj_patch.tgz -C $CMZJ_PATCH_ROOT_PATH
-       #   echo "cmzj_package" >> $LOG_PATH/cmzj_package.log
-       #   ls $CMZJ_PACKAGE_ROOT_PATH >> $LOG_PATH/cmzj_package.log
+#          tar xvpfz $GITHUB_WORKSPACE/cmzj_package.tgz -C $CMZJ_PACKAGE_ROOT_PATH
+#          tar xvpfz $GITHUB_WORKSPACE/cmzj_patch.tgz -C $CMZJ_PATCH_ROOT_PATH
+#          echo "cmzj_package" >> $LOG_PATH/cmzj_package.log
+#          ls $CMZJ_PACKAGE_ROOT_PATH >> $LOG_PATH/cmzj_package.log
           echo "cmzj_patch"  >> $LOG_PATH/cmzj_patch.log
           ls $CMZJ_PATCH_ROOT_PATH  >> $LOG_PATH/cmzj_patch.log
-      #    echo "cmzj_package-permissions" >> $LOG_PATH/cmzj_package.log
-      #    ls -l $CMZJ_PACKAGE_ROOT_PATH/** >> $LOG_PATH/cmzj_package.log
+#          echo "cmzj_package-permissions" >> $LOG_PATH/cmzj_package.log
+#          ls -l $CMZJ_PACKAGE_ROOT_PATH/** >> $LOG_PATH/cmzj_package.log
           echo "cmzj_patch-permissions" >> $LOG_PATH/cmzj_patch.log
           ls -l $CMZJ_PATCH_ROOT_PATH/**  >> $LOG_PATH/cmzj_patch.log
 
@@ -291,12 +291,12 @@ jobs:
         working-directory: ${{ env.OPENWRT_ROOT_PATH }}
         run: git checkout $(sed -n '/openwrt_tag\/branch/p' $GITHUB_WORKSPACE/config/${{ matrix.config }}/OpenWrt-K/compile.config | sed -e 's/.*=//')
 
-    #  - name: 复制cmzj_package
-    #    working-directory: ${{ env.WORKSPACE_ROOT_PATH }}
-    #    run: |
-    #      cp -r $CMZJ_PACKAGE_ROOT_PATH $OPENWRT_ROOT_PATH/package/cmzj_package
-    #      echo "cmzj_package" >> $LOG_PATH/cmzj_patch.log
-    #      ls $OPENWRT_ROOT_PATH/package/cmzj_package >> $LOG_PATH/cmzj_patch.log
+#      - name: 复制cmzj_package
+#        working-directory: ${{ env.WORKSPACE_ROOT_PATH }}
+#        run: |
+#          cp -r $CMZJ_PACKAGE_ROOT_PATH $OPENWRT_ROOT_PATH/package/cmzj_package
+#          echo "cmzj_package" >> $LOG_PATH/cmzj_patch.log
+#          ls $OPENWRT_ROOT_PATH/package/cmzj_package >> $LOG_PATH/cmzj_patch.log
 
       - name: 更新 feeds
         working-directory: ${{ env.OPENWRT_ROOT_PATH }}
@@ -766,8 +766,8 @@ jobs:
         working-directory: ${{ env.OPENWRT_ROOT_PATH }}
         run: |
           mkdir -p ./artifact/package
-    #      echo "artifact-/bin" >> $LOG_PATH/cmzj_package.log
-    #      ls -l ./bin/** >> $LOG_PATH/cmzj_package.log
+#          echo "artifact-/bin" >> $LOG_PATH/cmzj_package.log
+#          ls -l ./bin/** >> $LOG_PATH/cmzj_package.log
           cp -rf $(find ./bin/targets/ -type f -name "*.ipk") ./artifact/package/
           rm -rf $(find ./bin/targets/ -type d -name "packages")
           cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
@@ -944,8 +944,8 @@ jobs:
         working-directory: ${{ env.OPENWRT_ROOT_PATH }}
         run: |
           mkdir -p ./artifact/{package,kmod,buildinfo}
-     #     echo "artifact-/bin" >> $LOG_PATH/cmzj_package.log
-     #     ls -l ./bin/** >> $LOG_PATH/cmzj_package.log
+#          echo "artifact-/bin" >> $LOG_PATH/cmzj_package.log
+#          ls -l ./bin/** >> $LOG_PATH/cmzj_package.log
           ls -l ./bin/targets/${{ matrix.target }}/${{ matrix.subtarget }}/** >> $LOG_PATH/Image_Builder-bin.log
           cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
           cp -rf $(find ./bin/packages/ -type f -name "*.ipk") ./artifact/package/
@@ -1089,7 +1089,7 @@ jobs:
         working-directory: ${{ env.IMAGE_BUILDER_ROOT_PATH }}
         run: |
           mkdir -p ./artifact/buildinfo
-       #   echo "artifact-/bin" >> $LOG_PATH/cmzj_package.log
+#          echo "artifact-/bin" >> $LOG_PATH/cmzj_package.log
           ls -l ./bin/targets/${{ matrix.target }}/${{ matrix.subtarget }}/** >> $LOG_PATH/Image_Builder-bin.log
           cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
 
